fix img/video max-height, video sound
* max-height: 100%; no longer works on children of inline-block parents
  (in chrome)
* since the mouseover event for video sound was so specific to the
  element, videos with detail panes (which cover the video completely)
  weren't receiving the event

--- a/app/assets/stylesheets/days/_meta-panes.scss
+++ b/app/assets/stylesheets/days/_meta-panes.scss
@@ -119,6 +119,7 @@ div.meta.journal {
   padding: 0 20vw;
 
   article {
+    @include align-self(flex-start);
     cursor: text;
     outline: none;
     padding: 10vh 5vw;
@@ -136,6 +137,10 @@ div.meta.journal {
 
 div.meta.photos {
   overflow-x: scroll;
+
+  img, video {
+    max-height: 80vh;
+  }
 }
 
 div.meta.music {
